p5final/force-app/main/default/objects/Opportunity/fields/Date_End__c.field-meta.xml
<CustomField>
    <fullName>Date_End__c</fullName>
    <label>Date End</label>
    <type>Date</type>
</CustomField>