p5final/force-app/main/default/objects/Opportunity/fields/Date_Start__c.field-meta.xml
<CustomField>
    <fullName>Date_Start__c</fullName>
    <label>Date Start</label>
    <type>Date</type>
</CustomField>